--- a/en.html
+++ b/en.html
@@ -26,7 +26,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="page2.html">En</a></li>
+							<li class="active"><a href="en.html">En</a></li>
 							<li><a href="index.html">Fr</a></li>
 						</ul>
 						<ul class="icons">
