--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class = 'active'><a href="index.html">Fr</a></li>
-							<li><a href="page2.html">En</a></li>
+							<li><a href="en.html">En</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/aymane-moataz/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
