--- a/index.html
+++ b/index.html
@@ -23,39 +23,82 @@
 						</ul>
 					</div>
 
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class = 'active'><a href="index.html">Fr</a></li>
-							<li><a href="page2.html">En</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/aymane-moataz/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/moatazaymane" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
-
 				<!-- Main -->
 				<div id="main">
 					<!-- Posts -->
 						<section class="posts">
 							<article>
 								<header>
-									<h2><a href="https://github.com/moatazaymane/Quora_Question_Pairs">prédiction de similarité des questions<br />
-									- NLP/ Deep Learning</a></h2>
+									<h2><a href="https://github.com/moatazaymane/generative-adversarial-networks">Generative adversarial networks<br /></a></h2>
 								</header>
-								<a href="https://github.com/moatazaymane/Quora_Question_Pairs" class="image fit"><img src="images/project_quora.png" alt="" /></a>
-								<p>Quora est un site web social de questions-réponses. Il n'est pas surprenant que de nombreuses questions sur Quora soient formulées de manière similaire, étant donné que plus de 100 millions de personnes visitent le site chaque mois. L'objectif du projet est de détecter les questions similaires en utilisant l'apprentissage supervisé sur un ensemble de données de paires de questions.</p>
+								<a href="https://github.com/moatazaymane/generative-adversarial-networks" class="image fit"><img src="images/DCGAN - CelebA.png" alt="" /></a>
+								<p>Les réseaux adversaires génératifs sont apparus pour la première fois en 2014, tirant parti des avancées récentes en matière de vision par ordinateur à l'époque pour construire un modèle génératif. L'architecture du modèle est composée de deux réseaux neuronaux convolutionnels différents. Un discriminateur entraîné à classer les images comme vraies ou fausses, et un générateur qui produit des images synthétiques. J'ai utilisé la perte logarithmique pour entraîner le discriminateur et le générateur. Cela implique de mettre à jour les poids des deux réseaux à tour de rôle, le discriminateur étant entraîné à distinguer les images vraies des images fausses, tandis que les poids du générateur sont mis à jour de manière à ce que les images synthétiques produites trompent le discriminateur.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/moatazaymane/Quora_Question_Pairs" class="button">Découvrir le projet</a></li>
+									<li><a href="https://github.com/moatazaymane/generative-adversarial-networks" class="button">Discover the project</a></li>
 								</ul>
 							</article>
 						</section>
-
 					<!-- Footer -->
-
 				</div>
+				
+				<!-- Main -->
+				<div id="main">
+					<!-- Posts -->
+						<section class="posts">
+							<article>
+								<header>
+									<h2><a href="https://github.com/moatazaymane/deep-dream">Deep Dream<br /></a></h2>
+								</header>
+								<a href="https://github.com/moatazaymane/deep-dream" class="image fit"><img src="images/vgg19_layer12.png" alt="" /></a>
+								<p>Le deep dream est une technique utilisée pour produire des images qui maximisent les activations des couches sélectionnées dans les réseaux neuronaux convolutifs. L'image résultante peut être utilisée pour visualiser les caractéristiques apprises par le réseau neuronal convolutionnel. Après avoir choisi une couche, l'image est progressivement modifiée pour maximiser les activations. La technique du rêve profond a été introduite pour la première fois en 2015 par Alexander Mordvintsev de Google, Inceptionism : Going Deeper into Neural Networks de Google. Elle a été utilisée pour mieux comprendre les caractéristiques apprises par les réseaux neuronaux convolutifs. L'effet observable est qu'en général, les couches les moins profondes ont tendance à produire certaines caractéristiques dans les images telles que (cercles, lignes...) tandis que les couches plus profondes qui voient une plus grande partie de l'image reconnaissent des caractéristiques de plus haut niveau telles que (yeux, visages...)</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/moatazaymane/deep-dream" class="button">Discover the project</a></li>
+								</ul>
+							</article>
+						</section>
+					<!-- Footer -->
+				</div>
+
+
+			</div>
+
+			<!-- Main -->
+			<div id="main">
+				<!-- Posts -->
+					<section class="posts">
+						<article>
+							<header>
+								<h2><a href="https://github.com/moatazaymane/pytorch-transformer">Pyorch Transformer<br /></a></h2>
+							</header>
+							<a href="https://github.com/moatazaymane/pytorch-transformer" class="image fit"><img src="images/Masked_Attention_Heatmap_4.png" alt=""/></a>
+							<p>Dans ce projet, j'ai construit un modèle linguistique autorégressif. J'ai entraîné le modèle GPT 1 sur le jeu de données opus books. L'objectif est de prédire le prochain jeton en fonction du contexte.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/moatazaymane/pytorch-transformer" class="button">Discover the project</a></li>
+							</ul>
+						</article>
+					</section>
+				<!-- Footer -->
+			</div>
+
+
+				<!-- Main -->
+					<div id="main">
+						<!-- Posts -->
+							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="https://github.com/moatazaymane/Quora_Question_Pairs">Question Similarity<br />
+										Prediction - NLP/ Deep Learning</a></h2>
+									</header>
+									<a href="https://github.com/moatazaymane/Quora_Question_Pairs" class="image fit"><img src="images/project_quora.png" alt="" /></a>
+									<p>Quora est un site web social de questions-réponses. Il n'est pas surprenant que de nombreuses questions sur Quora soient formulées de la même manière, étant donné que plus de 100 millions de personnes visitent le site chaque mois. L'objectif du projet est de détecter les questions similaires en utilisant l'apprentissage supervisé sur un ensemble de données de paires de questions.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/moatazaymane/Quora_Question_Pairs" class="button">Discover the project</a></li>
+									</ul>
+								</article>
+							</section>
+						<!-- Footer -->
+					</div>
 
 			<!-- Footer -->
 				<footer id="footer">
